# RWC_Map_v2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md  RWC_Map_v2.sln  imgui.ini
Data/: settings.json
Include/: RWCMap.h
Include/DataOperations/: DataEditor.h  DataLoader.h  DataStorage.h  ImageContainer.h
Include/Modules/: Interface.h  Painter.h  RailroadBricks.h  Renderer.h
Include/Utils/: Functions.h
Sources/: RWCMap.cpp
Sources/DataOperations/: DataEditor.cpp  DataLoader.cpp  DataStorage.cpp
Sources/Modules/: Interface.cpp  Painter.cpp  RailroadBricks.cpp  Renderer.cpp  Window.cpp
Sources/Utils/: Functions.cpp
